js/js.translator/testData/incremental/invalidation/fakeOverrideInheritance/main/classABC.kt
class ClassABC: AbstractClassC() {
    inline fun testA() = funA()
    inline fun testB() = funB()
    inline fun testC() = funC()
}
